# gnome-characters

./: .editorconfig  .eslintrc.yml  .gitignore  .gitlab-ci.yml  AIConversation.txt  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.meson  configure.ac  gnome-characters.doap  meson.build  meson_options.txt  meson_post_install.py  ninja.log.html5  org.gnome.Characters.spec  pyproject.toml  uncrustify.cfg
.gitmeta/: .gitmeta  cids.txt
.gitmeta/cids_detailed/: files-only.txt  with-sha1.txt
build-aux/flatpak/: org.gnome.Characters.json
build-aux/snap/: snapcraft.yaml
data/: Makefile.am  ShellSearchProvider2.xml  app-menu.ui  application.css  character-dialog.ui  character.ui  character_dialog.ui  characterlist.ui  characters_view.ui  gschemas.compiled  main.ui  mainview.ui  mainwindow.ui  menu.ui  meson.build  org.gnome.Characters.BackgroundService.data.gresource.xml  org.gnome.Characters.BackgroundService.service.in  org.gnome.Characters.appdata.xml.in  org.gnome.Characters.appdata.xml.in.in  org.gnome.Characters.busname  org.gnome.Characters.data.gresource.xml  org.gnome.Characters.desktop.in  org.gnome.Characters.desktop.in.in  org.gnome.Characters.gschema.xml  org.gnome.Characters.metainfo.xml.in.in  org.gnome.Characters.search-provider.ini  org.gnome.Characters.service.in  shortcuts.ui  sidebar.ui  style.css  window.ui
data/icons/: Makefile.am  meson.build  render-icons.rb  render-symbolic.rb
gllib/: Makefile.am  array-mergesort.h  unicase.in.h  unictype.in.h  uniname.in.h  uninorm.in.h
gllib/unicase/: simple-mapping.h  tolower.c  totitle.c  toupper.c
gllib/unictype/: bidi_of.c  bitmap.h  block_test.c  blocks.c  categ_C.c  categ_Cc.c  categ_Cf.c  categ_Cn.c  categ_Co.c  categ_Cs.c  categ_L.c  categ_LC.c  categ_Ll.c  categ_Lm.c  categ_Lo.c  categ_Lt.c  categ_Lu.c  categ_M.c  categ_Mc.c  categ_Me.c  categ_Mn.c  categ_N.c  categ_Nd.c  categ_Nl.c  categ_No.c  categ_P.c  categ_Pc.c  categ_Pd.c  categ_Pe.c  categ_Pf.c  categ_Pi.c  categ_Po.c  categ_Ps.c  categ_S.c  categ_Sc.c  categ_Sk.c  categ_Sm.c  categ_So.c  categ_Z.c  categ_Zl.c  (+103 more)
gllib/uniname/: uniname.c  uninames.h
gllib/uninorm/: canonical-decomposition.c  decompose-internal.c  decompose-internal.h  decomposition-table.c  decomposition-table.h  nfd.c  normalize-internal.h  u-normalize-internal.h  u32-normalize.c
gllib/unistr/: u-cpy.h  u32-cpy.c  u32-mbtouc-unsafe.c  u32-to-u8.c  u32-uctomb.c  u8-strmblen.c  u8-to-u32.c
gllib/uniwidth/: width.c
glm4/: gnulib-cache.m4  gnulib-comp.m4
lib/: Makefile.am  blocks.h  confusables.h  emoji.h  gc-enumtypes.c.template  gc-enumtypes.h.template  gc.c  gc.h  gen-blocks.py  gen-confusables.py  gen-consusables.py  gen-emoji.py  gen-hangul.py  gen-keyword-trie.py  gen-languages.py  gen-libunistring-pot.c  gen-names.py  gen-scripts.py  generator_utils.py  hangul.h  languages.h  meson.build  names.h  regenerate.sh  scripts.h  test_generator_utils.py  top-collector.c  top-collector.h
lint/: eslintrc-characters.yml  eslintrc-gjs.yml
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  ar.po  az.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  (+39 more)
snap/: snapcraft.yaml
src/: .eslintrc.json  Makefile.am  categoryList.js  character.js  characterDialog.js  characterList.js  characters.js  charactersView.js  main.js  menu.js  meson.build  org.gnome.Characters.BackgroundService.in  org.gnome.Characters.BackgroundService.src.gresource.xml  org.gnome.Characters.BackgroundService.src.gresource.xml.in  org.gnome.Characters.in  org.gnome.Characters.src.gresource.xml  org.gnome.Characters.src.gresource.xml.in  params.js  searchProvider.js  service.js  sidebar.js  sidebarRow.js  util.js  window.js
subprojects/: libhandy.wrap
tests/: Makefile.am  jsTestRunner.js.in  meson.build  smoke_test.py  test.in  testUtil.js  testutil.py
tools/: eslint.config.js  package-lock.json  package.json  run-eslint.sh
