[project]
name = "gnome-characters"
version = "0.1.0"
description = "GNOME Characters"
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest>=8.4.0", "pytest-cov>=6.2.1", "ruff>=0.12.11"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--verbose"]
testpaths = ["lib"]

[tool.coverage.run]
source = ["lib"]
omit = ["lib/test_*.py"]

# https://www.reddit.com/r/Python/comments/1kttfst/comment/mtwfzfi
[tool.ruff.lint]
extend-select = [
  "F",   # Pyflakes rules
  "W",   # PyCodeStyle warnings
  "E",   # PyCodeStyle errors
  "I",   # Sort imports properly
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC", # Good use of string concatenation
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "TID", # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "PTH", # Use pathlib instead of os.path
  "TD",  # Be diligent with TODO comments
  "NPY", # Some numpy-specific things
]
